// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography  1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  Default should render nicely.
</p>
`;

exports[`Typography  2`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: bold;
  line-height: 1.428571429;
  margin: 0;
  text-align: center;
}

<p
  className="emotion-0"
>
  body variant should render nicely with center bold.
</p>
`;

exports[`Typography  3`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  body variant should render nicely.
</p>
`;

exports[`Typography  4`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  caption variant should render nicely.
</p>
`;

exports[`Typography  5`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

<h1
  className="emotion-0"
>
  h1 variant should render nicely.
</h1>
`;

exports[`Typography  6`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

<h2
  className="emotion-0"
>
  h2 variant should render nicely.
</h2>
`;

exports[`Typography  7`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<h3
  className="emotion-0"
>
  h3 variant should render nicely.
</h3>
`;

exports[`Typography  8`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<figcaption
  className="emotion-0"
>
  h3 variant should render nicely with figcaption.
</figcaption>
`;

exports[`Typography  9`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0 additonal-class"
>
  Default should render nicely.
</p>
`;

exports[`Typography renders Typography with align and fontWeight props 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: bold;
  line-height: 1.428571429;
  margin: 0;
  text-align: center;
}

<p
  className="emotion-0"
>
  body variant should render nicely with center bold.
</p>
`;

exports[`Typography renders Typography with className props 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0 additonal-class"
>
  Default should render nicely.
</p>
`;

exports[`Typography renders body variant Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  body variant should render nicely.
</p>
`;

exports[`Typography renders caption variant Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  caption variant should render nicely.
</p>
`;

exports[`Typography renders default Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<p
  className="emotion-0"
>
  Default should render nicely.
</p>
`;

exports[`Typography renders h1 variant Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

<h1
  className="emotion-0"
>
  h1 variant should render nicely.
</h1>
`;

exports[`Typography renders h2 variant Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

<h2
  className="emotion-0"
>
  h2 variant should render nicely.
</h2>
`;

exports[`Typography renders h3 variant Typography 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<h3
  className="emotion-0"
>
  h3 variant should render nicely.
</h3>
`;

exports[`Typography renders h3 variant Typography with any arbitrary semantic element 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<figcaption
  className="emotion-0"
>
  h3 variant should render nicely with figcaption.
</figcaption>
`;
